--- a/saveukraine-react/package.json
+++ b/saveukraine-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "saveukraine-react",
   "version": "0.1.0",
+  "homepage": "https://brianross93.github.io/saveukraine",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
