--- a/saveukraine/package.json
+++ b/saveukraine/package.json
@@ -1,7 +1,7 @@
 {
   "name": "saveukraine-react",
   "version": "0.1.0",
-  "homepage": "https://brianross93.github.io/saveukraine",
+  "homepage": "sleepy-carson-91ab34.netlify.app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.1",
